# TrialMode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_release.sh
libraries/include/sol/: forward.hpp
packs/_templates/template_ran/: pack.json
packs/cirno_basic/: bnb1  bnb10  bnb2  bnb3  bnb4  bnb5  bnb6  bnb7  bnb8  bnb9  pack.json
packs/marisa_basic/: BnB air combo 1  BnB air combo 2  BnB air combo 3  Broomride 1  Broomride 2  Corner Utsuho Optimal  Corner ground j2a  Corner j2a catch  Dragon Meteor  Dust Storm EX  Gravity Beat 2  Most Important Combo to Practice  marisaany1.json  marisacorn1.json  marisacorn2.json  marisacorn3.json  marisacorn4.json  marisacorn5.json  marisacorn6.json  marisacorn7.json  marisadust1.json  marisadust2.json  marisafinal.json  marisagrav1.json  marisamid1.json  marisamid2.json  marisamid3.json  pack.json
packs/sakuya_story/: lore4outro.lua  lore8.json  pack.json  staffroll.lua
packs/tenshi_basic/: 4A 3A LunaTriV 1  4A Midscreen Ladder  4SC Temperament Meteorical Revelation  4SCIntro.lua  5A Deep Corner Drill Loop  5AA Midscreen Drill Loop  5AAA  5AAA Deep Corner  66A d623 Confirm  66A d623 comno  Air Combo Midscreen  Air Drills Loops  Blue Sky  BlueSkyIntro.lua  Easy 5A d623 Midscreen Confirm  Meter Usage  Monsoon  MonsoonIntro.lua  THE END (but basically).lua  pack.json
src/: Menu.cpp  TrialMode.ini  version.h  version.rc
src/Animations/: BattleAnimFramework.cpp  LuaBattleAnimation.cpp
src/Trial/: ComboTrial.cpp
src/TrialEditor/: ComboTrialEditor.cpp
src/packs/remilia_story/: bnbcorn2outro.lua  pack.json
src/packs/sakuya_story/: pack.json
